FIxed footer text link truncation issue

--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -615,6 +615,21 @@
   .w-40 {
     width: calc(var(--spacing) * 40);
   }
+  .w-60 {
+    width: calc(var(--spacing) * 60);
+  }
+  .w-64 {
+    width: calc(var(--spacing) * 64);
+  }
+  .w-70 {
+    width: calc(var(--spacing) * 70);
+  }
+  .w-72 {
+    width: calc(var(--spacing) * 72);
+  }
+  .w-80 {
+    width: calc(var(--spacing) * 80);
+  }
   .w-96 {
     width: calc(var(--spacing) * 96);
   }
@@ -687,14 +702,26 @@
   .max-w-xs {
     max-width: var(--container-xs);
   }
+  .min-w-0 {
+    min-width: calc(var(--spacing) * 0);
+  }
+  .min-w-full {
+    min-width: 100%;
+  }
   .flex-1 {
     flex: 1;
+  }
+  .flex-shrink {
+    flex-shrink: 1;
   }
   .flex-shrink-0 {
     flex-shrink: 0;
   }
   .shrink-0 {
     flex-shrink: 0;
+  }
+  .flex-grow {
+    flex-grow: 1;
   }
   .-translate-y-2 {
     --tw-translate-y: calc(var(--spacing) * -2);
@@ -2175,6 +2202,11 @@
       max-width: var(--container-lg);
     }
   }
+  .sm\:max-w-sm {
+    @media (width >= 40rem) {
+      max-width: var(--container-sm);
+    }
+  }
   .sm\:min-w-\[320px\] {
     @media (width >= 40rem) {
       min-width: 320px;
@@ -2343,6 +2375,11 @@
       width: 650px;
     }
   }
+  .md\:max-w-60 {
+    @media (width >= 48rem) {
+      max-width: calc(var(--spacing) * 60);
+    }
+  }
   .md\:min-w-\[400px\] {
     @media (width >= 48rem) {
       min-width: 400px;
@@ -2502,6 +2539,11 @@
       max-width: none;
     }
   }
+  .lg\:max-w-xs {
+    @media (width >= 64rem) {
+      max-width: var(--container-xs);
+    }
+  }
   .lg\:grid-cols-3 {
     @media (width >= 64rem) {
       grid-template-columns: repeat(3, minmax(0, 1fr));
@@ -2577,9 +2619,19 @@
       width: fit-content;
     }
   }
+  .xl\:max-w-60 {
+    @media (width >= 80rem) {
+      max-width: calc(var(--spacing) * 60);
+    }
+  }
   .xl\:max-w-96 {
     @media (width >= 80rem) {
       max-width: calc(var(--spacing) * 96);
+    }
+  }
+  .xl\:max-w-fit {
+    @media (width >= 80rem) {
+      max-width: fit-content;
     }
   }
   .xl\:grid-cols-3 {
